--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@
 name = OBJExport
 
 # List of authors. Links can be provided using the syntax [author name](url).
-authorList = [Jesse Louis-Rosenberg (edited my Michael Zoellner)](http://n-e-r-v-o-u-s.com)
+authorList = [Jesse Louis-Rosenberg](http://n-e-r-v-o-u-s.com)
 
 # A web page for your library, NOT a direct link to where to download it.
 url = http://n-e-r-v-o-u-s.com/tools/obj
@@ -42,8 +42,8 @@ paragraph =
 # compare different versions of the same library, and check if an update is 
 # available. You should think of it as a counter, counting the total number of 
 # releases you've had.
-version = 2  # This must be parsable as an int
+version = 3  # This must be parsable as an int
 
 # The version as the user will see it. If blank, the version attribute will be 
 # used here.
-prettyVersion = 0.1.2  # This is treated as a String
+prettyVersion = 0.2.1  # This is treated as a String
